fixed a bug with email generator

--- a/src/App/Forms/EmailTemplate/app.html
+++ b/src/App/Forms/EmailTemplate/app.html
@@ -46,14 +46,14 @@
 
     <div class="row"> 
         <div class="col-md-12">
-            <h2>Embedded email link code</h2> 
+            <h3>Embedded email link code</h3> 
              <textarea ng-model="link" rows="5" class="long-input" ></textarea>
         </div>
     </div>
 
     <div class="row"> 
         <div class="col-md-12">
-              <a ng-href="{{link}}">Send email</a>
+              <a ng-href="{{link}}">Send email</a> <-- click here to test the template
         </div>
     </div>
     
