--- a/src/App/Forms/EmailTemplate/app.html
+++ b/src/App/Forms/EmailTemplate/app.html
@@ -5,6 +5,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.8/angular-sanitize.min.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="/_layouts/15/sp.runtime.js"></script>
+<script src="/_layouts/15/sp.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
 <link href="/catalogue/Assets/App/Forms/EmailTemplate/emailTemplate.css" rel="stylesheet" >
 
